--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^2.1.3",
     "react-transition-group": "^2.5.1",
     "redux": "^3.7.2",
     "superagent": "^3.8.3",
